<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyPass</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="create_account">Create Account</string>
    <string name="last_name">last name</string>
    <string name="signup">Signup</string>
    <string name="first_name">first name</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="reenter_password">reenter password</string>
</resources>
