<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:background="#666666"
    tools:context="com.csci.easypass.MainActivity"
    tools:ignore="MergeRootFrame" >
    <RelativeLayout android:layout_width="match_parent" android:layout_height="48dp" android:background="@drawable/N7design_titlebar">

        <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_centerHorizontal="true" android:contentDescription="@+string/app_name" android:src="@drawable/N7design_title" />

    </RelativeLayout>
    <requestFocus />
    
        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_centerVertical="true"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editText1"
            android:layout_centerVertical="true"
            android:text="@string/login" />

</RelativeLayout>
